# portkiller

./: .gitignore  .oxfmtrc.json  Cargo.toml  README.md  bump.config.ts  index.html  mise.toml  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: build-windows.yml  ci.yml
crates/portkiller-cli/: Cargo.toml
crates/portkiller-cli/src/: lib.rs  main.rs
crates/portkiller-core/: Cargo.toml
crates/portkiller-core/src/: lib.rs  models.rs  settings.rs
crates/portkiller-core/src/ports/: filter.rs  killer.rs  mod.rs  scanner.rs
crates/portkiller-core/src/windows/: mod.rs  path.rs
crates/portkiller-core/tests/: integration.rs
scripts/: make_icon.py
src/: index.css  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  updater.rs
src-tauri/windows/: installer-hooks.nsh
src-tauri/windows/fragments/: path-env.wxs
src/app/: App.tsx  providers.tsx
src/components/ui/: alert-dialog.tsx  button.tsx  card.tsx  input.tsx  scroll-area.tsx  switch.tsx  tabs.tsx
src/features/favorites/: FavoritesTab.tsx
src/features/ports/: PortList.tsx  PortRow.tsx  SearchBar.tsx  filter.test.ts  filter.ts  usePortsQuery.ts
src/features/settings/: SettingsPanel.tsx
src/features/updates/: useAutoUpdateCheck.ts
src/lib/: errors.ts
src/lib/api/: invoke.ts  types.ts
src/lib/i18n/: index.ts
src/lib/i18n/dictionaries/: en.ts
src/lib/query/: client.ts  keys.ts
