[package]
name = "portkiller-core"
version.workspace = true
edition.workspace = true

[dependencies]
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
thiserror = "2"
nucleo-matcher = "0.3"
winreg = "0.55"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
	"Win32_Foundation",
	"Win32_NetworkManagement_IpHelper",
	"Win32_Networking_WinSock",
	"Win32_System_Threading",
	"Win32_UI_WindowsAndMessaging",
	"Win32_System_ProcessStatus",
	"Win32_System_Diagnostics_ToolHelp",
] }
wmi = "0.14"
